Fix overflow

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -12,6 +12,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        overflow: hidden;
     }
     
     #title_box{
@@ -34,10 +35,12 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        overflow: hidden;
     }
     
     #title_box{
-        margin-top: 30vh;
+        position: absolute;
+        margin-top: 40vh;
     }
 }
 
